# envok

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
aws_env_o/: manager.py
aws_env_o/shared/: utils.py
envok/: manager.py
envok/shared/: utils.py
src/: main.py
tests/: env.json  test_get_env.py  test_runner.py  test_save_env.py
tests/test_cases/: test_get_env.py  test_rm_env.py  test_save_env.py  test_update_env.py
